--- a/index.html
+++ b/index.html
@@ -69,16 +69,14 @@
 									<h2>Bai Liu (刘柏)</h2>
 									<p>
 										<a>bailiu [at] mit.edu</a> &nbsp 
-										<a href="files/BaiLiu_CV.pdf"><font color="3498DB">[CV]</font></a> &nbsp 
+										<a href="files/BaiLiu_Resume.pdf"><font color="3498DB">[CV]</font></a> &nbsp 
 										<a href="https://www.linkedin.com/in/bai-liu/"><font color="3498DB">[LinkedIn]</font></a> &nbsp 
 										<a href="https://github.com/bailiumit"><font color="3498DB">[GitHub]</font></a> &nbsp 
 									</p>									
 								</header>
-								<p>I am currently a Ph.D. candidate in <a href="https://lids.mit.edu"><font color="3498DB">Laboratory for Information and Decision Systems (LIDS)</font></a>, <a href="http://web.mit.edu"><font color="3498DB">Massachusetts Institute of Technology</font></a>, advised by Prof. <a href="https://modiano.mit.edu"><font color="3498DB">Eytan Modiano</font></a>. </p>
+								<p>I obtained my Ph.D. degree in Communications, Networks and Statistics from <a href="https://lids.mit.edu"><font color="3498DB">Laboratory for Information and Decision Systems (LIDS)</font></a>, <a href="http://web.mit.edu"><font color="3498DB">Massachusetts Institute of Technology</font></a>, advised by Prof. <a href="https://modiano.mit.edu"><font color="3498DB">Eytan Modiano</font></a>. </p>
 
-								<p>My research focuses on designing practical algorithms to solve the learning and control problems in network systems, with the application of optimization, machine learning and inference methods.</p>
-
-								<p>My current expected graduation time is <strong>December 2022</strong>. I am actively looking for full-time jobs related to cloud networks, recommendation systems, operation research, etc.</p>
+								<p>I am currently working for Google Cloud in AI infrastructure.</p>
 							</div>
 						</section>
 
@@ -88,7 +86,7 @@
 								<h3>Publications</h3>
 								<h4>Paper</h4>
 									<ul>
-										<li><strong>Bai Liu</strong>, and Eytan Modiano. Tracking MaxWeight*: Optimal Control for Partially Observable and Controllable Networks. <i>IEEE/ACM Transactions on Networking.</i> Under Review.</a></li>
+										<li><strong>Bai Liu</strong>, and Eytan Modiano. Tracking MaxWeight*: Optimal Control for Partially Observable and Controllable Networks. <i>IEEE/ACM Transactions on Networking.</i>, December 2022.</a></li>
 										<li><strong>Bai Liu</strong>, and Eytan Modiano. Universal Policy Tracking: Scheduling for Wireless Networks with Delayed State Observation. <i>58th Annual Allerton Conference on Communication, Control, and Computing</i>, September 2022.</li>
 										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. RL-QN: A Reinforcement Learning Framework for Optimal Control of Queueing Systems. <i>ACM Transactions on Modeling and Performance Evaluation of Computing Systems</i>. April 2022. &nbsp <a href="https://arxiv.org/abs/2011.07401"><font color="3498DB">[arXiv]</font></a></li>
 										<li><strong>Bai Liu</strong>, and Eytan Modiano. Optimal Control for Networks with Unobservable Malicious Nodes. <i>Performance Evaluation</i>, November 2021</a></li>  
