--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
 									<h2>Bai Liu (刘柏)</h2>
 									<p>
 										<a>bailiu [at] mit.edu</a> &nbsp 
-										<a href="files/BaiLiu_Resume.pdf"><font color="3498DB">[CV]</font></a> &nbsp 
+										<a href="files/BaiLiu_Resume.pdf"><font color="3498DB">[Résumé]</font></a> &nbsp 
 										<a href="https://www.linkedin.com/in/bai-liu/"><font color="3498DB">[LinkedIn]</font></a> &nbsp 
 										<a href="https://github.com/bailiumit"><font color="3498DB">[GitHub]</font></a> &nbsp 
 									</p>									
 								</header>
 								<p>I obtained my Ph.D. degree in Communications, Networks and Statistics from <a href="https://lids.mit.edu"><font color="3498DB">Laboratory for Information and Decision Systems (LIDS)</font></a>, <a href="http://web.mit.edu"><font color="3498DB">Massachusetts Institute of Technology</font></a>, advised by Prof. <a href="https://modiano.mit.edu"><font color="3498DB">Eytan Modiano</font></a>. </p>
 
-								<p>I am currently working for Google Cloud in AI infrastructure.</p>
+								<p>I am currently working on AI infrastructure in Google Cloud.</p>
 							</div>
 						</section>
 
