--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 								</header>
 								<p>I am currently a research scientist in Meta (Facebook). I work in the Ads ML Ranking Services team, focusing on AI inference serving systems.</p>
 
-								<p>I obtained my Ph.D. degree in Communications, Networks and Statistics from <a href="https://lids.mit.edu"><font color="3498DB">Laboratory for Information and Decision Systems (LIDS)</font></a>, <a href="http://web.mit.edu"><font color="3498DB">Massachusetts Institute of Technology</font></a>, advised by Prof. <a href="https://modiano.mit.edu"><font color="3498DB">Eytan Modiano</font></a>. </p>
+								<p>I obtained my Ph.D. degree in Communications, Networks and Statistics from <a href="https://lids.mit.edu"><font color="3498DB">Massachusetts Institute of Technology</font></a>, advised by Prof. <a href="https://modiano.mit.edu"><font color="3498DB">Eytan Modiano</font></a>. </p>
 
-								<p>For my publication, please refer to my <a href="files/BaiLiu_Resume.pdf"><font color="3498DB">[full résumé]</font></a>. </p>
+								<p>For my publication, please refer to my <a href="files/BaiLiu_Resume.pdf"><font color="3498DB">full résumé</font></a>. </p>
 							</div>
 						</section>
 
